api: Start experimenting with multi-release classes for handling collections